# bergline

./: .env.example  .gitignore  LOCAL_SETUP.md  Makefile  README.md  generate_secret_key.py  main.py  manage.py  pyproject.toml  requirements.txt
.claude/agent-memory/code-reviewer/: MEMORY.md
app/: aggregate.py  config.py  extract_openai.py  ingest_reddit.py  ingest_telegram.py  main.py  supabase_db.py
apps/messages/: admin.py  apps.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/messages/migrations/: 0001_initial.py
apps/messages/scrapers/: constants.py  reddit.py  telegram.py
apps/messages/scrapers/connection_tests/: test_telegram.py
apps/messages/services/: ai_analysis.py
apps/queuedata/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/queuedata/migrations/: 0001_initial.py
apps/schedule/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/schedule/migrations/: 0001_initial.py
apps/users/: authentication.py  models.py
apps/users/migrations/: 0001_initial.py  0002_user_is_staff_user_is_superuser_user_password_and_more.py  0003_remove_user_google_id.py
bergline/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
bergline/settings/: __init__.py  development_psql.py  development_sqlite.py  production.py
documentation/: LOCAL_SETUP.md
