[project]
name = "bergline"
version = "0.1.0"
description = "REST API backend that tracks the Berghain nightclub queue in real time"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.2",
    "djangorestframework>=3.16",
    "django-celery-beat>=2.9",
    "django-environ>=0.13",
    "celery>=5.6",
    "redis>=7.3",
    "psycopg2-binary>=2.9",
    "gunicorn>=25.1",
    "openai>=2.26",
    "praw>=7.8",
    "Telethon>=1.42",
    "google-auth>=2.49",
    "google-auth-oauthlib>=1.3",
]
